# native-voice-command-detector

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  package.json
lib/: index.d.ts  index.js
src/: main.cpp  types.h
src/APIs/: GSpeechToText.cpp  GSpeechToText.hpp  HTTPClient.cpp  HTTPClient.hpp
src/Codecs/: OpusDecoder.cpp  OpusDecoder.hpp  OpusOggEncoder.cpp  OpusOggEncoder.hpp
src/Config/: AppConfig.hpp
src/Ticker/: Ticker.cpp  Ticker.hpp
src/Utils/: LogSetup.cpp  LogSetup.hpp
src/VoiceProcessing/: CommandProcessor.cpp  CommandProcessor.hpp  HotwordDetector.cpp  HotwordDetector.hpp  VoiceManager.cpp  VoiceManager.hpp  VoiceProcessor.cpp  VoiceProcessor.hpp
